Most report content finished for analysis stage. Only figures and a bit of cleanup required.

--- a/report/Appendix1/appendix1.tex
+++ b/report/Appendix1/appendix1.tex
@@ -153,6 +153,14 @@ Further rephrasing of lifted sentences, such as the last one, could be beneficia
     \caption{Penn Treebank Tagset in alphabetical order}
 \end{table}
 
+\section{Testing Specifications}
+\label{sec:specs}
+\begin{itemize}
+\item{Processor: Intel Core i7-3612QM CPU @ 2.10 GHz}
+\item{RAM: 8GB}
+\item{Average round trip ping to demo.ark.cs.cmu.edu: 131 milliseconds}
+\end{itemize}
+
 \section{FrameNet Frames to ConceptNet Relations}
 \label{sec:fntocn}
 \textbf{PartOf}
@@ -336,6 +344,47 @@ Further rephrasing of lifted sentences, such as the last one, could be beneficia
 \item{pobj}
 \item{quantmod}
 \end{itemize}
+
+\section{Onomatopoeia Types to ConceptNet Relations}
+\label{sec:ono-relation}
+\begin{itemize}
+\item{laughter: TakesAction $\rightarrow$ laugh}
+\item{laughing: TakesAction $\rightarrow$ laugh}
+\item{hit: ReceivesAction $\rightarrow$ hit}
+\item{hard hit: ReceivesAction $\rightarrow$ hard hit}
+\item{punch: TakesAction $\rightarrow$ punch}
+\item{fall: TakesAction $\rightarrow$ fall}
+\item{light hit: ReceivesAction $\rightarrow$ light hit}
+\item{liquid: HasProperty $\rightarrow$ wet}
+\item{water: HasProperty $\rightarrow$ wet}
+\item{wet: HasProperty $\rightarrow$ wet}
+\item{rain: HasProperty $\rightarrow$ wet}
+\item{coins: IsA $\rightarrow$ money}
+\item{weapon: IsA $\rightarrow$ weapon}
+\item{metal: MadeOf $\rightarrow$ metal}
+\item{rubber: MadeOf $\rightarrow$ rubber}
+\item{music: HasProperty $\rightarrow$ musical}
+\item{disease: HasProperty $\rightarrow$ ill}
+\item{surprise: HasProperty $\rightarrow$ surprised}
+\item{dismay: HasProperty $\rightarrow$ dismay}
+\item{pain: HasProperty $\rightarrow$ in pain}
+\item{telephone: IsA $\rightarrow$ telephone}
+\item{siren: HasA $\rightarrow$ siren}
+\item{electronic: HasProperty $\rightarrow$ electronic}
+\item{static: HasProperty $\rightarrow$ electronic}
+\item{electric: HasProperty $\rightarrow$ electronic}
+\item{television: HasProperty $\rightarrow$ electronic}
+\item{video games: HasProperty $\rightarrow$ electronic}
+\item{horn: HasA $\rightarrow$ horn}
+\item{clock: IsA $\rightarrow$ clock}
+\item{predator: IsA $\rightarrow$ predator}
+\item{animal: IsA $\rightarrow$ animal}
+\item{frog: IsA $\rightarrow$ frog}
+\item{bird: IsA $\rightarrow$ bird}
+\item{cat: IsA $\rightarrow$ cat}
+\item{dog: IsA $\rightarrow$ dog}
+\end{itemize}
+
 % ------------------------------------------------------------------------
 
 %%% Local Variables: 
