--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -197,6 +197,8 @@ Techniques include:
 \item{\textbf{Simile}: an object or action is specifically described using an adjective or adverb, but compared to another object that is a stereotypical example of that description. The phrases 'like a' and 'as a' are often used, e.g. \textit{Runs like a cheetah}, \textit{Slippery as an eel}.}
 \item{\textbf{Hyperbole}: unrealistic exaggeration, often used in tandem with metaphor e.g. \textit{Cried a river of tears}.}
 \item{\textbf{Powerful Verb}: a more exciting way to describe an action using unusual verbs, e.g. \textit{Wormed through the crowd}.}
+\item{\textbf{Personification}: see section \ref{sec:pragpers}}
+\item{\textbf{Onomatopoeia}: see section \ref{sec:sound}}
 \end{itemize}
 
 \textbf{Major Purposes}
